@@ -1,3 +1,11 @@
+2008-01-01  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-utils.c (g_mime_utils_generate_message_id): Fixed a
+	Free Memory Read access (FMR) by not freeing 'name' before using
+	it's value. Also reworked to take advantage of uname(2) or
+	getdomainname() to get the domain name if available to avoid
+	having to do a DNS lookup.
+
 2007-01-01  Jeffrey Stedfast  <fejj@novell.com>
 
 	* README: Bumped version
